--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!--引入kafka-->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
